  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
  
??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
         ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
         xhgchen, jaclark5, DrDomenicoMarson, AHMED-salah00, schlaicha,
         SophiaRuan, g2707, p-j-smith, tylerjereddy, xiki-tempula

 * 2.5.0

Fixes
  * Fix the `heavy` distance_type for water bridge analysis where distance
    is not correctly assigned when more than one hydrogen is bonded to a
    heavy atom (Issue #4040, PR #4066).
  * PDB topology parser no longer fails when encountering unknown formal
    charges and instead simply does not populate attribute (Issue #4027)
  * Added support for Cython 3.0.0b2 (PR #4129)
  * Ensure 'HydrogenBondAnalysis' returns the correct distances when using the
    'between' keyword (PR #4092)
  * Skip tests artificially checking for readonly or PermissionError cases
    when running at root user on linux systems (Issue #4112, PR #4120)
  * Fix chi1_selections() ignored atom names CG1 OG OG1 SG and incorrectly returned
    None for amino acids CYS, ILE, SER, THR, VAL (Issue #4108)
  * Fix parsing of box vector in H5MD reader (Issue #4076)
  * Fix the misleading 'AtomGroup.guess_bonds()' docs and passed missing
    arguments (PR #4059)
  * Fix for NetCDF trajectories without `time` variable (Issue #4073)
  * Allows shape_parameter and asphericity to yield per residue quantities
    (Issue #3002, PR #3905)
  * Add tests for "No path data" exception raise in test_psa.py (Issue #4036)
  * Fix uninitialized `format` variable issue when calling
    `selections.get_writer` directly (PR #4043)